# robot

axis/: CMakeLists.txt  package.xml  setup.py
axis/msg/: StepperCommand.msg
axis/nodes/: test_node
axis/scripts/: motion_command_generator  motion_control
axis/src/axis/: __init__.py  stepper_control.py
drives/: CMakeLists.txt  package.xml  setup.py
drives/launch/: test_launch.launch
drives/msg/: MotionCommand.msg  MotorCommand.msg
drives/nodes/: test_node
drives/scripts/: motion_command_generator  motion_control
drives/src/drives/: __init__.py  motor_control.py
